Add destroyer mode

--- a/node/k8s.yaml
+++ b/node/k8s.yaml
@@ -27,6 +27,8 @@ spec:
           env:
           - name: NODE
             value: $node
+          - name: TYPE
+            value: $type
       volumes:
         - name: $node
           persistentVolumeClaim:
